tests/snapshots/examples_fixtures/type_system__failing__05_runtime_float_string_arg_via_any.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/05_runtime_float_string_arg_via_any.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The 1st argument to `area` has the wrong type.

  --> examples/type_system/failing/05_runtime_float_string_arg_via_any.flx:12:6
   |
 5 | fn area(radius: Float) -> Float {

 6 |     3.14159 * radius * radius

 7 | }

 8 | 

 9 | let dynamic = identity("not-a-float")

10 | 

11 | 

12 | area(dynamic)
   |      ^^^^^^^
   |      ------- this argument is `String`

Help:
  Expected `Float` as the 1st argument.
== stdout ==
<not executed>
